--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="luna.png" type="image/x-icon">
 </head>
 <body>
     <h1>TO DO LIST</h1>
